--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -12,10 +12,17 @@
         <img src="static/img/beckhoff.png" alt="beckhoff">
         <img src="static/img/gx_works.png" alt="gx_works">
         <ul>
+            {% if lang == 'en' %}
+            <li>6 years of experience in different industries and different types of controllers</li>
+            <li>Beckhoff</li>
+            <li>Mitsubishi</li>
+            <li>Fatek</li>
+            {% else %}
             <li>6 lat doświadczenia w różnych branżach i różnych typach sterowników</li>
             <li>Beckhoff</li>
             <li>Mitsubishi</li>
             <li>Fatek</li>
+            {% endif %}
         </ul>
     </div>
     <div class="project-card">
@@ -25,29 +32,49 @@
             <img src="static/img/indusoft.png" alt="Indusoft">
         </div>
         <ul>
-            <li>Tradycyjne HMi</li>
+            {% if lang == 'en' %}
+            <li>Traditional HMI</li>
+            <li>Scada</li>
+            <li>Local desktop applications working as HMI</li>
+            {% else %}
+            <li>HMI tradycyjne</li>
             <li>Scada</li>
             <li>lokalne aplikacje desktopowe pracujące jako HMI</li>
+            {% endif %}
         </ul>
     </div>
     <div class="project-card">
         <h3>Robotics</h3>
         <img src="static/img/kuka.png" alt="kuka" style="width: 100%; height: auto; padding: 30px; padding-bottom: 30px;">
         <ul>
+            {% if lang == 'en' %}
+            <li>Programming of industrial robots and automation of manipulation</li>
+            <li>First robot startups KUKA</li>
+            <li>Integration of safety and robot control with PLC systems</li>
+            {% else %}
             <li>Programowanie robotów przemysłowych i automatyzacja manipulacji</li>
             <li>Pierwsze uruchomienia robotów KUKA</li>
             <li>integracja safety i sterowania robotów z systemami PLC</li>
+            {% endif %}
         </ul>
     </div>       
     <div class="project-card">
         <h3>Vision</h3>
         <img src="static/img/ultralytics.png" alt="Vision">
         <ul>
+            {% if lang == 'en' %}
+            <li>Vision systems and image processing in industrial applications</li>
+            <li>Ultralytics</li>
+            <li>Yolov8</li>
+            <li>Postprocessing of detection and segmentation results for industrial applications</li>
+            <li>Control of complex processes such as plasma welding, laser welding, TIG welding</li>
+            {% else %}
             <li>Systemy wizyjne i przetwarzanie obrazu w zastosowaniach przemysłowych</li>
             <li>Ultralytics</li>
             <li>Yolov8</li>
-            <li>Postprocessing rezultatów detekcji i segmentacji dla zastosowań przemysłowych</li>
+            <li>Postprocessing of detection and segmentation results for industrial applications</li>
             <li>Kontrola trudnych procesów jak np. spawanie plazmowe, spawanie lasermi, spawanie TIG</li>
+            {% endif %}
         </ul>
     </div>
     <div class="project-card">
@@ -57,42 +84,72 @@
             <img src="static/img/python.png" alt="Machine Learning" >
         </div>
         <ul>
-            <li>Implementacja modelu LSTM do przerwidywania zużycia przetworników ultradzwiękowych</li>
+            {% if lang == 'en' %}
+            <li>Implementation of LSTM model for predicting the consumption of ultrasonic transducers</li>
+            <li>Analysis of large datasets to detect patterns in complex processes</li>
+            <li>Preparing reports based on large datasets</li>
+            {% else %}
+            <li>Implementacja modelu LSTM do przerwidywania zużycia przetworników ultradzwiękowychers</li>
             <li>Analiza dużych zbiorów danych w celu wykrycia prawidłowości w trudnych procesach</li>
             <li>Przygotowywanie raportów bazujących na dużych zbiorach danych</li>
+            {% endif %}
         </ul>
     </div>
     <div class="project-card">
         <h3>Large Language Models</h3>
         <img src="static/img/llama.jpeg" alt="LLM">
         <ul>
+            {% if lang == 'en' %}
+            <li>Using language models in automation and process optimization</li>
+            <li>Local LLM training for operator assistant functions</li>
+            <li>Training LLM for complex data analysis in long time context</li>
+            {% else %}
             <li>Wykorzystanie modeli językowych w automatyzacji i optymalizacji procesów</li>
             <li>Przyuczanie lokalnych LLM do funkcji Asystent operatora</li>
             <li>Przyuczanie LLM do rozpatrywania złożonych danych w długim kontekście czasowym</li>
+            {% endif %}
         </ul>
     </div>
     <div class="project-card">
         <h3>Aplikacje desktopowe</h3>
         <img src="static/img/csharp.png" alt="Embeded Systems">
         <ul>
+            {% if lang == 'en' %}
+            <li>Creating dedicated desktop applications for industry</li>
+            <li>Using C#, WPF, .net maui for desktop application development</li>
+            <li>HMI for PLC controllers using modern technologies</li>
+            {% else %}
             <li>Tworzenie dedykowanych aplikacji desktopowych dla przemysłu</li>
             <li>korzystanie z C#, WPF, .net maui dla realizacji aplikacji desktopowych</li>
             <li>HMI dla sterowników PLC z wykorzystaniem nowoczesnych technologii</li>
+            {% endif %}
         </ul>
     </div>
     <div class="project-card">
         <h3>Systemy wbudowane</h3>
         <img src="static/img/cplusplus.png" alt="Aplikacje desktopowe">
         <ul>
+            {% if lang == 'en' %}
+            <li>Programming of embedded systems and microcontrollers</li>
+            <li>Programming in C/C++</li>
+            <li>Realization of budget solutions on microcontrollers</li>
+            {% else %}
             <li>Programowanie systemów wbudowanych i mikrokontrolerów</li>
             <li>Programowanie w C/C++</li>
             <li>Realizacje budżetowych rozwiązań na mikrokontrolerach</li>
+            {% endif %}
         </ul>
     </div>         
     <div class="project-card">
         <h3>Dockeryzacja aplikacji</h3>
         <img src="static/img/docker.png" alt="Aplikacje desktopowe">
-        <p>Dockeryzacja aplikacji w celu zwiększenia elastyczności i skalowalności</p>
+        <ul>
+            {% if lang == 'en' %}
+            <li>Dockeryzacja aplikacji in order to increase flexibility and scalability</li>
+            {% else %}
+            <li>Dockeryzacja aplikacji w celu zwiększenia elastyczności i skalowalności</li>
+            {% endif %}
+        </ul>
     </div>       
 </div>
 {% endblock %} 
