--- a/templates/production.html
+++ b/templates/production.html
@@ -34,11 +34,21 @@
         <ul>
             {% if lang == 'en' %}
             <li>Translation of C++ code from Arduino framework and Controlino platform to Beckhoff PLC IEC 1131-3 Structured Text</li>
+            <li>Refactoring of procedural code to object-oriented code</li>
             <li>Enhancement of vacuum furnace functionality</li>
+            <ul>
+                <li>Development of algorithms for balancing currents in heating elements</li>
+                <li>Design and development of vacuum-dependent degassing stop functions</li>
+            </ul>            
             <li>Testing and leading the furnace software implementation project for client deployment</li>
             {% else %}
             <li>Translacja kodu C++ na framework Arduino i platformie Controlino na sterownik Beckhoff IEC 1131-3 Język ST</li>
+            <li>Refaktoryzacja kodu proceduralnego do kodu obiektowy</li>
             <li>Rozwinięcie funkcjonalności pieca próżniowego</li>
+                <ul>
+                    <li>Opracowanie algorytmy wyrównywania prądów na grzałkach</li>
+                    <li>Wymyślenie i opracowanie funkcji przystanków odgazowujących zależnych od wartości próżni</li>
+                </ul>
             <li>Testy i prowadzenie projektu oprogramowania pieca do wdrożenia u klienta</li>
             {% endif %}
         </ul>
