before movie upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,5 +69,6 @@
 </p>
 <p>Specjalizuję się w implementacji innowacyjnych rozwiązań, wykorzystując zaawansowane technologie, takie jak systemy wizyjne oraz modele AI w automatyce przemysłowej.</p>
 <p>Łączę kompetencje z zakresu systemów PLC oraz technologii IT, co pozwala na tworzenie zoptymalizowanych, efektywnych kosztowo rozwiązań dla najbardziej wymagających aplikacji przemysłowych.</p>
+<iframe width="320px" height="240px" src="https://drive.google.com/file/d/10z6PN6jWFJ7uZ8uADrGCTFV2Zmae1HAr/view?usp=embed"></iframe>
 {% endif %}
 {% endblock %} 
