--- a/templates/production.html
+++ b/templates/production.html
@@ -11,7 +11,7 @@
     <div class="project-card">
         <h3>{% if lang == 'en' %}Ultrasonic Atomizer rePowder{% else %}Automatyczny Atomizer ultradzwiękowy rePowder{% endif %}</h3>
         <img src="static/img/rePowder.png" alt="rePowder Ultrasonic Atomizer">
-        <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
+        <a href="https://www.amazemet.com/repowder/" target="_blank">https://www.amazemet.com/repowder/</a>
         <ul>
             {% if lang == 'en' %}
             <li>Translation of C++ code built on Arduino framework and Controlino platform to Beckhoff PLC IEC 1131-3 Structured Text</li>
@@ -30,7 +30,7 @@
     <div class="project-card">
         <h3>{% if lang == 'en' %}Vacuum Furnace inFurner{% else %}Piec próżniowy inFurner{% endif %}</h3>
         <img src="static/img/inFurner.png" alt="inFurner Vacuum Furnace">
-        <a href="https://www.amazemet.com/" target="_blank">https://www.amazemet.com/</a>
+        <a href="https://www.amazemet.com/infurner/" target="_blank">https://www.amazemet.com/infurner/</a>
         <ul>
             {% if lang == 'en' %}
             <li>Translation of C++ code from Arduino framework and Controlino platform to Beckhoff PLC IEC 1131-3 Structured Text</li>
