--- a/templates/index.html
+++ b/templates/index.html
@@ -69,6 +69,10 @@
 </p>
 <p>Specjalizuję się w implementacji innowacyjnych rozwiązań, wykorzystując zaawansowane technologie, takie jak systemy wizyjne oraz modele AI w automatyce przemysłowej.</p>
 <p>Łączę kompetencje z zakresu systemów PLC oraz technologii IT, co pozwala na tworzenie zoptymalizowanych, efektywnych kosztowo rozwiązań dla najbardziej wymagających aplikacji przemysłowych.</p>
-<iframe width="320px" height="240px" src="https://drive.google.com/file/d/10z6PN6jWFJ7uZ8uADrGCTFV2Zmae1HAr/view?usp=embed"></iframe>
+<video width="1920" height="1080" controls>
+    <source src="{{ url_for('static', filename='cut_for_annotate.mp4') }}" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
 {% endif %}
 {% endblock %} 
+
